Fix dark mode toggle and asset loading issues
- Implement proper dark/light mode with Tailwind classes
- Fix Navigation, Footer, and Layout components for theme switching
- Update hero section and badges with responsive dark mode styles
- Fix vite.svg favicon path from absolute to relative
- Add proper theme classes throughout the app
- Ensure all UI elements support both light and dark themes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elton Peixoto - DevOps • SRE • Platform Engineering</title>
     <meta name="description" content="DevOps, SRE e Platform Engineering. Infra as Code, observabilidade e plataformas internas em AWS & GCP." />
