fix: configure for Vercel deployment - remove base path and add vercel.json

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://elton-peixoto-lu.github.io/portifolio/" />
+    <meta property="og:url" content="https://your-domain.vercel.app/" />
     <meta property="og:title" content="Elton Peixoto - DevOps • SRE • Platform Engineering" />
     <meta property="og:description" content="DevOps, SRE e Platform Engineering. Infra as Code, observabilidade e plataformas internas em AWS & GCP." />
-    <meta property="og:image" content="https://elton-peixoto-lu.github.io/portifolio/og-image.png" />
+    <meta property="og:image" content="https://your-domain.vercel.app/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://elton-peixoto-lu.github.io/portifolio/" />
+    <meta property="twitter:url" content="https://your-domain.vercel.app/" />
     <meta property="twitter:title" content="Elton Peixoto - DevOps • SRE • Platform Engineering" />
     <meta property="twitter:description" content="DevOps, SRE e Platform Engineering. Infra as Code, observabilidade e plataformas internas em AWS & GCP." />
-    <meta property="twitter:image" content="https://elton-peixoto-lu.github.io/portifolio/og-image.png" />
+    <meta property="twitter:image" content="https://your-domain.vercel.app/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
